[package]
name = "soulflame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
byteorder = "1.4.3"
serde_json = "1.0.82"
toml = "0.5.9"
log = "0.4.17"

[dependencies.serde]
version = "1.0.138"
features = ["derive"]