[package]
name = "soulflame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
byteorder = "1.4.3"
serde_json = "1.0.82"
toml = "0.5.9"
log = "0.4.17"
async-trait = "0.1.56"
chrono = "0.4.19"
regex = "1.6.0"
lazy_static = "1.4.0"
serde_with = "2.0.0-rc.0"
hematite-nbt = "0.5.2"
flume = "0.10.13"
base64 = "0.20.0-alpha.1"

[dependencies.flate2]
version = "1.0.24"
features = ["zlib-ng"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4","serde"]

[dependencies.log4rs]
version = "1.1.1"
features = ["console_appender", "file_appender", "gzip"]

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[dependencies.tokio]
version = "1.19.2"
features = ["full"]